<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SignInUpActivity">

    <ImageView
        android:id="@+id/im_ava"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.101"
        tools:srcCompat="@tools:sample/avatars"
        tools:ignore="ContentDescription"/>

    <Button
        android:id="@+id/avatar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/avatar"
        app:layout_constraintEnd_toEndOf="@+id/ed_login"
        app:layout_constraintStart_toStartOf="@+id/ed_login"
        app:layout_constraintTop_toBottomOf="@+id/im_ava" />

    <EditText
        android:id="@+id/ed_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:ems="10"
        android:hint="@string/login"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="@+id/im_ava"
        app:layout_constraintStart_toStartOf="@+id/im_ava"
        app:layout_constraintTop_toBottomOf="@+id/avatar" />

    <EditText
        android:id="@+id/ed_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="@+id/ed_login"
        app:layout_constraintStart_toStartOf="@+id/ed_login"
        app:layout_constraintTop_toBottomOf="@+id/ed_login" />

    <EditText
        android:id="@+id/ed_name1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:hint="@string/name1"
        android:inputType="textPersonName"
        android:visibility="visible"
        app:layout_constraintEnd_toEndOf="@+id/ed_password"
        app:layout_constraintStart_toStartOf="@+id/ed_password"
        app:layout_constraintTop_toBottomOf="@+id/ed_password" />

    <EditText
        android:id="@+id/ed_name2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:hint="@string/name2"
        android:inputType="textPersonName"
        android:visibility="visible"
        app:layout_constraintEnd_toEndOf="@+id/ed_name1"
        app:layout_constraintStart_toStartOf="@+id/ed_name1"
        app:layout_constraintTop_toBottomOf="@+id/ed_name1" />

    <Button
        android:id="@+id/done"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/done"
        android:visibility="visible"
        app:layout_constraintEnd_toEndOf="@+id/ed_password"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/ed_password"
        tools:layout_editor_absoluteY="550dp" />

    <EditText
        android:id="@+id/ed_name3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:hint="@string/name3"
        android:inputType="textPersonName"
        android:visibility="visible"
        app:layout_constraintEnd_toEndOf="@+id/ed_name2"
        app:layout_constraintStart_toStartOf="@+id/ed_name2"
        app:layout_constraintTop_toBottomOf="@+id/ed_name2" />
</androidx.constraintlayout.widget.ConstraintLayout>